<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EL2809" Id="{54a83c62-d0a3-4ef3-9ca6-9b464908d8f1}">
    <Declaration><![CDATA[TYPE ST_EL2809 :
STRUCT
	bStartIndicator 			: BOOL;  // Start Indicator 
    bResetIndicator 			: BOOL;  // Reset Indicator 
    bTowerRedLight 				: BOOL;  // Alarm Red Light 
    bTowerAmberLight 			: BOOL;  // Warning Amber Light 
    bTowerGreenLight	 		: BOOL;  // Auto Cycle Green Light 
    bTowerBuzzer 				: BOOL;  // Buzzer 
    bSolenoidValveB 			: BOOL;  // Solenoid Valve B 
    bSolenoidValveA 			: BOOL;  // Solenoid Valve A 
    bSolenoidValveC 			: BOOL;  // Solenoid Valve C 

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>